--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,7 +32,7 @@
   <nav class="navbar navbar-expand-lg fixed-top nav-back">
     <div class="container">
       <span class="navbar-brand">
-        <img src="{{ url_for('static', filename='image/favicon/favicon-32x32.png') }}" width="26" height="26" class="mr-2">
+        <img src="{{ url_for('static', filename='image/favicon/favicon-96x96.png') }}" width="26" height="26" class="mr-2">
         <strong>vnkrtv</strong>
      </span>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,13 +65,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="first-slide" src="{{ url_for('static', filename='image/1.jpg') }}" alt="First slide">
+      <img class="first-slide" src="{{ url_for('static', filename=carousel_images.0) }}" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="second-slide" src="{{ url_for('static', filename='image/2.jpg') }}" alt="Second slide">
+      <img class="second-slide" src="{{ url_for('static', filename=carousel_images.1) }}" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="third-slide" src="{{ url_for('static', filename='image/3.jpg') }}" alt="Third slide">
+      <img class="third-slide" src="{{ url_for('static', filename=carousel_images.2) }}" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#next" role="button" data-slide="prev">
@@ -96,135 +96,17 @@
         <h1 class="text-center">Projects</h1>
         <div class="row">
 
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="image-flip" >
-                    <div class="mainflip flip-0">
-                        <div class="frontside">
-                            <div class="card">
-                                <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="{{ url_for('static', filename='image/go-logo.png') }}" alt="card image"></p>
-                                    <h4 class="card-title">go-tcp-chat</h4>
-                                    <p class="card-text">TCP chat with text user interface.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="backside" onclick="">
-                            <div class="card">
-                                <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">Description</h4>
-                                    <div class="card-text">
-                                      <p>Simple TCP chat on sockets with text user interface.</p>         
-                                      <p>
-                                        <span class="badge badge-dark">go</span>
-                                      </p>
-                                    </div>
-                                    <ul class="list-inline">
-                                        <li class="list-inline-item">
-                                            <a href="https://github.com/vnkrtv"><img src="{{ url_for('static', filename='image/icons/github.svg') }}"></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+          {% for project in projects %}
 
             <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
-                    <div class="mainflip">
-                        <div class="frontside">
-                            <div class="card">
-                                <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="{{ url_for('static', filename='image/python-logo.jpg') }}" alt="card image"></p>
-                                    <h4 class="card-title">vk-tracker</h4>
-                                    <p class="card-text">Web app for tracking, analizing and searching people in VK.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="backside">
-                            <div class="card">
-                                <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">Description</h4>
-                                    <div class="card-text">
-                                      <p>Web application for tracking VK users and searching users by specified filters.
-Implemented on django and dash, data is stored in MongoDB and Neo4j.</p>
-                                    
-                                      <p>
-                                        <span class="badge badge-dark">python</span>
-                                        <span class="badge badge-dark">html5</span>
-                                        <span class="badge badge-dark">java script</span>
-                                        <span class="badge badge-dark">bootstrap4</span>
-                                        <span class="badge badge-dark">django</span>
-                                        <span class="badge badge-dark">vk</span>
-                                        <span class="badge badge-dark">dash</span>
-                                        <span class="badge badge-dark">mongo</span>
-                                        <span class="badge badge-dark">neo4j</span>
-                                        <span class="badge badge-dark">docker</span>
-                                        <span class="badge badge-dark">travis-ci</span>
-                                      </p>
-                                    </div>
-                                    <ul class="list-inline">
-                                        <li class="list-inline-item">
-                                            <a href="https://github.com/vnkrtv"><img src="{{ url_for('static', filename='image/icons/github.svg') }}"></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
-                    <div class="mainflip">
-                        <div class="frontside">
-                            <div class="card">
-                                <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="{{ url_for('static', filename='image/cpp-logo.png') }}" alt="card image"></p>
-                                    <h4 class="card-title">matrix-multiplier</h4>
-                                    <p class="card-text">Calculates all possible products of vectors in a given matrix.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="backside">
-                            <div class="card">
-                                <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">Description</h4>
-                                    <div class="card-text">
-                                      <p>Calculates all possible products of vectors in a given matrix with specified threshold, preserving the final product chains.</p>
-                                    
-                                      <p>
-                                        <span class="badge badge-dark">C++14</span>
-                                        <span class="badge badge-dark">libtorch</span>
-                                        <span class="badge badge-dark">Qt5</span>
-                                        <span class="badge badge-dark">Map Reduce</span>
-                                        <span class="badge badge-dark">CUDA</span>
-                                        <span class="badge badge-dark">cmake</span>
-                                      </p>
-                                    </div>
-                                    <ul class="list-inline">
-                                        <li class="list-inline-item">
-                                            <a href="https://github.com/vnkrtv"><img src="{{ url_for('static', filename='image/icons/github.svg') }}"></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="image-flip" >
                     <div class="mainflip flip-0">
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="{{ url_for('static', filename='image/go-logo.png') }}" alt="card image"></p>
-                                    <h4 class="card-title">go-tcp-chat</h4>
-                                    <p class="card-text">TCP chat with text user interface.</p>
+                                    <p><img class=" img-fluid" src="{{ url_for('static', filename=project.image) }}" alt="card image"></p>
+                                    <h4 class="card-title">{{ project.name }}</h4>
+                                    <p class="card-text">{{ project.front_description }}</p>
                                 </div>
                             </div>
                         </div>
@@ -233,61 +115,22 @@ Implemented on django and dash, data is stored in MongoDB and Neo4j.</p>
                                 <div class="card-body text-center mt-4">
                                     <h4 class="card-title">Description</h4>
                                     <div class="card-text">
-                                      <p>Simple TCP chat on sockets with text user interface.</p>         
+                                      <p>{{ project.back_description }}</p>         
                                       <p>
-                                        <span class="badge badge-dark">go</span>
+                                        {% for tag in project.tags %}
+                                          <span class="badge badge-dark">{{ tag }}</span>                                          
+                                        {% endfor %}
                                       </p>
                                     </div>
                                     <ul class="list-inline">
                                         <li class="list-inline-item">
-                                            <a href="https://github.com/vnkrtv"><img src="{{ url_for('static', filename='image/icons/github.svg') }}"></a>
+                                            <a href="https://github.com/{{ project.github_name }}"><img src="{{ url_for('static', filename='image/icons/github.svg') }}"></a>
                                         </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Team member -->
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
-                    <div class="mainflip">
-                        <div class="frontside">
-                            <div class="card">
-                                <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="{{ url_for('static', filename='image/python-logo.jpg') }}" alt="card image"></p>
-                                    <h4 class="card-title">vk-tracker</h4>
-                                    <p class="card-text">Web app for tracking, analizing and searching people in VK.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="backside">
-                            <div class="card">
-                                <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">Description</h4>
-                                    <div class="card-text">
-                                      <p>Web application for tracking VK users and searching users by specified filters.
-Implemented on django and dash, data is stored in MongoDB and Neo4j.</p>
-                                    
-                                      <p>
-                                        <span class="badge badge-dark">python</span>
-                                        <span class="badge badge-dark">html5</span>
-                                        <span class="badge badge-dark">java script</span>
-                                        <span class="badge badge-dark">bootstrap4</span>
-                                        <span class="badge badge-dark">django</span>
-                                        <span class="badge badge-dark">vk</span>
-                                        <span class="badge badge-dark">dash</span>
-                                        <span class="badge badge-dark">mongo</span>
-                                        <span class="badge badge-dark">neo4j</span>
-                                        <span class="badge badge-dark">docker</span>
-                                        <span class="badge badge-dark">travis-ci</span>
-                                      </p>
-                                    </div>
-                                    <ul class="list-inline">
+                                        {% if project.ref %}
                                         <li class="list-inline-item">
-                                            <a href="https://github.com/vnkrtv"><img src="{{ url_for('static', filename='image/icons/github.svg') }}"></a>
-                                        </li>
+                                            <a href="{{ project.ref }}"><img src="{{ url_for('static', filename='image/icons/ref.svg') }}"></a>
+                                        </li>                                        
+                                        {% endif %}
                                     </ul>
                                 </div>
                             </div>
@@ -296,45 +139,7 @@ Implemented on django and dash, data is stored in MongoDB and Neo4j.</p>
                 </div>
             </div>
             
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
-                    <div class="mainflip">
-                        <div class="frontside">
-                            <div class="card">
-                                <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="{{ url_for('static', filename='image/cpp-logo.png') }}" alt="card image"></p>
-                                    <h4 class="card-title">matrix-multiplier</h4>
-                                    <p class="card-text">Calculates all possible products of vectors in a given matrix.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="backside">
-                            <div class="card">
-                                <div class="card-body text-center mt-4">
-                                    <h4 class="card-title">Description</h4>
-                                    <div class="card-text">
-                                      <p>Calculates all possible products of vectors in a given matrix with specified threshold, preserving the final product chains.</p>
-                                    
-                                      <p>
-                                        <span class="badge badge-dark">C++14</span>
-                                        <span class="badge badge-dark">libtorch</span>
-                                        <span class="badge badge-dark">Qt5</span>
-                                        <span class="badge badge-dark">Map Reduce</span>
-                                        <span class="badge badge-dark">CUDA</span>
-                                        <span class="badge badge-dark">cmake</span>
-                                      </p>
-                                    </div>
-                                    <ul class="list-inline">
-                                        <li class="list-inline-item">
-                                            <a href="https://github.com/vnkrtv"><img src="{{ url_for('static', filename='image/icons/github.svg') }}"></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+          {% endfor %}
 
         </div>
     </div>
