--- a/app/static/css/cards.css
+++ b/app/static/css/cards.css
@@ -79,9 +79,9 @@ section .section-title {
     -o-transform: rotateY(-180deg);
     -ms-transform: rotateY(-180deg);
     transform: rotateY(-180deg);
-    -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
-    -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
-    box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    /*-webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);*/
+    /*-moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);*/
+    /*box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);*/
 }
 
 .frontside,
