--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -93,7 +93,7 @@
 
 <section id="team" class="pb-5">
     <div class="container" id='projects'>
-        <h1 class="text-center">Projects</h1>
+        <h1 class="text-center">Projects</h1><br>
         <div class="row">
 
           {% for project in projects %}
