Update projects section
Add postgres-markov-chain project
Update other projects tags

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -2,28 +2,11 @@
  height: 95vh;
 }
 
-.portfolio{
- margin: 4em 0;
-    position: relative;
-}
-.portfolio h1{
- color: black;
- margin: 2em;
-}
-.portfolio img{
-  height: 15rem;
-  width: 100%;
-  margin: 1em;
-}
-
-
-
 .icon-container > img {
     cursor: pointer;
     height: 30px;
     width: 30px;
 }
-
 
 .site-href {
     color: #848484;
@@ -36,6 +19,7 @@
 
 .nav-back {
     background-color: white/*#adadad*/;
+    z-index: 64;
 }
 
 .navbar-toggler.navbar-toggler {
