--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -57,7 +57,7 @@
   </nav>
 
 <header class="header" id='top'>
-<div id="next" class="carousel slide" data-ride="next">
+<!--div id="next" class="carousel slide" data-ride="next">
   <ol class="carousel-indicators">
     <li data-target="#next" data-slide-to="0" class="active"></li>
     <li data-target="#next" data-slide-to="1"></li>
@@ -82,11 +82,14 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
+</div-->
 <div class="overlay">
   <div class="carousel-caption text-left">
     <h1 >Hello, world!</h1>
-    <p>Content comming soon...</p>
+    <p>I am a beginner ML Engineer & Backend Developer.<br>
+       Programming on Python, C++, Go and a bit JS.<br>
+       Administer my own Linux server.<br>
+       Here some of my projects <u><a href='#projects' style="color: black;">below</a></u></p>
   </div>
 </div>
 </header>
@@ -118,7 +121,7 @@
                                       <p>{{ project.back_description }}</p>         
                                       <p>
                                         {% for tag in project.tags %}
-                                          <span class="badge badge-dark">{{ tag }}</span>                                          
+                                          <span class="badge badge-dark">{{ tag }}</span>                                  
                                         {% endfor %}
                                       </p>
                                     </div>
@@ -149,8 +152,8 @@
      <h1 class="text-center">Contacts</h1>
  <div class="container">
   <div class="container">
-    <p class="text-center">Very informative information comming soon...<br>
-    Meanwhile let telegram & github links be here :)</p>
+    <p class="text-center">You can contact me in telegram at any time.<br>
+    There is also my github link with all projects.</p>
     <div class="icon-container text-center">
         <a href="https://t.me/vnkrtv"><img src="{{ url_for('static', filename='image/icons/tg.svg') }}"></a>
         <a href="https://github.com/vnkrtv"><img src="{{ url_for('static', filename='image/icons/github.svg') }}"></a>
@@ -165,7 +168,10 @@
   </footer>
 
   <script type="text/javascript">
-    let scroll = new SmoothScroll('a[href*="#"]');
+    let scroll = new SmoothScroll('a[href*="#"]', {
+        speed: 300,
+        speedAsDuration: true
+    });
   </script>
 
 </body>
