--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -65,13 +65,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="first-slide" src="{{ url_for('static', filename=carousel_images.0) }}" alt="First slide">
+      <img class="first-slide" src="" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="second-slide" src="{{ url_for('static', filename=carousel_images.1) }}" alt="Second slide">
+      <img class="second-slide" src="" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="third-slide" src="{{ url_for('static', filename=carousel_images.2) }}" alt="Third slide">
+      <img class="third-slide" src="" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#next" role="button" data-slide="prev">
