--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,95 +3,104 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta itemprop="image" content="{{ url_for('static', filename='image/favicon/favicon-96x96.png') }}">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="vnkrtv">
+    <meta charset="utf-8">
+    <meta itemprop="image" content="{{ url_for('static', filename='image/favicon/favicon-96x96.png') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="vnkrtv">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='image/favicon/favicon-32x32.png') }}">
-  <link rel="icon" type="image/png" sizes="96x96" href="{{ url_for('static', filename='image/favicon/favicon-96x96.png') }}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='image/favicon/favicon-16x16.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32"
+          href="{{ url_for('static', filename='image/favicon/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="96x96"
+          href="{{ url_for('static', filename='image/favicon/favicon-96x96.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16"
+          href="{{ url_for('static', filename='image/favicon/favicon-16x16.png') }}">
 
-  <link rel="shortcut icon" href="{{ url_for('static', filename='image/favicon/favicon.ico') }}"/>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='image/favicon/favicon.ico') }}"/>
 
-  <title>{{ title }}</title>
+    <title>{{ title }}</title>
 
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/cards.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/cards.css') }}">
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0/dist/smooth-scroll.polyfills.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0/dist/smooth-scroll.polyfills.min.js"></script>
 
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg fixed-top nav-back">
+<nav class="navbar navbar-expand-lg fixed-top nav-back">
     <div class="container">
       <span class="navbar-brand">
-        <img src="{{ url_for('static', filename='image/favicon/favicon-96x96.png') }}" width="26" height="26" class="mr-2">
+        <img src="{{ url_for('static', filename='image/favicon/favicon-96x96.png') }}" width="26" height="26"
+             class="mr-2">
         <strong>vnkrtv</strong>
      </span>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a id="main-link" class="nav-link" href='#top'>About
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a id="projects-link" class="nav-link" href='#projects'>Projects</a>
-          </li>
-          <li class="nav-item">
-            <a id="contacts-link" class="nav-link" href='#contacts'>Contacts</a>
-          </li>
-        </ul>
-      </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a id="main-link" class="nav-link" href='#top'>About
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a id="projects-link" class="nav-link" href='#projects'>Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a id="contacts-link" class="nav-link" href='#contacts'>Contacts</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </nav>
+</nav>
 
 <header class="header" id='top'>
-<!--div id="next" class="carousel slide" data-ride="next">
-  <ol class="carousel-indicators">
-    <li data-target="#next" data-slide-to="0" class="active"></li>
-    <li data-target="#next" data-slide-to="1"></li>
-    <li data-target="#next" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="first-slide" src="" alt="First slide">
+    <!--div id="next" class="carousel slide" data-ride="next">
+      <ol class="carousel-indicators">
+        <li data-target="#next" data-slide-to="0" class="active"></li>
+        <li data-target="#next" data-slide-to="1"></li>
+        <li data-target="#next" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="first-slide" src="" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="second-slide" src="" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="third-slide" src="" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#next" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#next" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div-->
+    <div class="overlay">
+        <div class="carousel-caption text-left">
+            <h1 id="mainTitle">Hello, world!</h1>
+            <p>I am a beginner ML Engineer & Backend Developer.<br>
+                Programming on Python, C++, Go and a bit JS.<br>
+                Administer my own Linux server.<br>
+                Here some of my projects <u><a href='#projects' style="color: black;">below</a></u></p>
+        </div>
     </div>
-    <div class="carousel-item">
-      <img class="second-slide" src="" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="third-slide" src="" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#next" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#next" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div-->
-<div class="overlay">
-  <div class="carousel-caption text-left">
-    <h1 >Hello, world!</h1>
-    <p>I am a beginner ML Engineer & Backend Developer.<br>
-       Programming on Python, C++, Go and a bit JS.<br>
-       Administer my own Linux server.<br>
-       Here some of my projects <u><a href='#projects' style="color: black;">below</a></u></p>
-  </div>
-</div>
 </header>
 
 <section id="team" class="pb-5">
@@ -99,15 +108,16 @@
         <h1 class="text-center">Projects</h1><br>
         <div class="row">
 
-          {% for project in projects %}
+            {% for project in projects %}
 
             <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="image-flip" >
+                <div class="image-flip">
                     <div class="mainflip flip-0">
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="{{ url_for('static', filename=project.image) }}" alt="card image"></p>
+                                    <p><img class=" img-fluid" src="{{ url_for('static', filename=project.image) }}"
+                                            alt="card image"></p>
                                     <h4 class="card-title">{{ project.name }}</h4>
                                     <p class="card-text">{{ project.front_description }}</p>
                                 </div>
@@ -118,21 +128,23 @@
                                 <div class="card-body text-center mt-4">
                                     <h4 class="card-title">Description</h4>
                                     <div class="card-text">
-                                      <p>{{ project.back_description }}</p>         
-                                      <p>
-                                        {% for tag in project.tags %}
-                                          <span class="badge badge-dark">{{ tag }}</span>                                  
-                                        {% endfor %}
-                                      </p>
+                                        <p>{{ project.back_description }}</p>
+                                        <p>
+                                            {% for tag in project.tags %}
+                                            <span class="badge badge-dark">{{ tag }}</span>
+                                            {% endfor %}
+                                        </p>
                                     </div>
                                     <ul class="list-inline">
                                         <li class="list-inline-item">
-                                            <a href="https://github.com/vnkrtv/{{ project.github_name }}"><img src="{{ url_for('static', filename='image/icons/github.svg') }}"></a>
+                                            <a href="https://github.com/vnkrtv/{{ project.github_name }}"><img
+                                                    src="{{ url_for('static', filename='image/icons/github.svg') }}"></a>
                                         </li>
                                         {% if project.ref %}
                                         <li class="list-inline-item">
-                                            <a href="{{ project.ref }}"><img src="{{ url_for('static', filename='image/icons/ref.svg') }}"></a>
-                                        </li>                                        
+                                            <a href="{{ project.ref }}"><img
+                                                    src="{{ url_for('static', filename='image/icons/ref.svg') }}"></a>
+                                        </li>
                                         {% endif %}
                                     </ul>
                                 </div>
@@ -141,39 +153,42 @@
                     </div>
                 </div>
             </div>
-            
-          {% endfor %}
+
+            {% endfor %}
 
         </div>
     </div>
 </section>
 
 <div class="contacts" id='contacts'>
-     <h1 class="text-center">Contacts</h1>
- <div class="container">
-  <div class="container">
-    <p class="text-center">You can contact me in telegram at any time.<br>
-    There is also my github link with all projects.</p>
-    <div class="icon-container text-center">
-        <a href="https://t.me/vnkrtv"><img src="{{ url_for('static', filename='image/icons/tg.svg') }}"></a>
-        <a href="https://github.com/vnkrtv"><img src="{{ url_for('static', filename='image/icons/github.svg') }}"></a>
-      </div>
-  </div>
-
-  <!-- Footer -->
-  <footer class="py-5 nav-back">
+    <h1 class="text-center">Contacts</h1>
     <div class="container">
+        <div class="container">
+            <p class="text-center">You can contact me in telegram at any time.<br>
+                There is also my github link with all projects.</p>
+            <div class="icon-container text-center">
+                <a href="https://t.me/vnkrtv"><img src="{{ url_for('static', filename='image/icons/tg.svg') }}"></a>
+                <a href="https://github.com/vnkrtv"><img
+                        src="{{ url_for('static', filename='image/icons/github.svg') }}"></a>
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <footer class="py-5 nav-back">
+            <div class="container">
+            </div>
+            <!-- /.container -->
+        </footer>
+
+        <script type="text/javascript" src="{{ url_for('static', filename='js/vk.js') }}"></script>
+        <script type="text/javascript">
+            let scroll = new SmoothScroll('a[href*="#"]', {
+                speed: 300,
+                speedAsDuration: true
+            });
+        </script>
     </div>
-    <!-- /.container -->
-  </footer>
-
-  <script type="text/javascript">
-    let scroll = new SmoothScroll('a[href*="#"]', {
-        speed: 300,
-        speedAsDuration: true
-    });
-  </script>
-
+</div>
 </body>
 
 </html>
