--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -186,15 +186,16 @@
                 speed: 300,
                 speedAsDuration: true
             });
-            vkBridge.send("VKWebAppInit", {});
-            vkBridge.send("VKWebAppGetUserInfo", {});
             vkBridge.subscribe((e) => {
+                console.log(e);
                 if (e.type === "VKWebAppGetUserInfo") {
                     console.log(e.data.status);
                     const title = document.getElementById('mainTitle');
                     title.innerHTML = `Hello, ${e.data.first_name} ${e.data.second_name} from ${e.data.city.title}!`;
                 }
             });
+            vkBridge.send("VKWebAppInit", {});
+            vkBridge.send("VKWebAppGetUserInfo", {}).then();
         </script>
     </div>
 </div>
