Add VK bridge support
Add vk-bridge node module

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -197,7 +197,8 @@
             vkBridge
                 .send('VKWebAppGetUserInfo')
                 .then((e) => {
-                    console.log('VKWebAppGetUserInfo: ', e.data.status);
+                    console.log('VKWebAppGetUserInfo: ');
+                    console.log(e);
                     const title = document.getElementById('mainTitle');
                     title.innerHTML = `Hello, ${e.data.first_name} ${e.data.second_name} from ${e.data.city.title}!`;
                 })
